--- a/core/templates/giris_statistika.html
+++ b/core/templates/giris_statistika.html
@@ -1,12 +1,6 @@
 {% load static%}
-<!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!-->
+<!Doctype html>
 <html class="no-js" lang="en">
-<!--<![endif]-->
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -42,26 +36,24 @@
                         <div class="card-body">
                             <form action="" method="POST" enctype="multipart/form-data">
                                 {%csrf_token%}
-                                <table id="bootstrap-data-table-export" class="table table-striped table-bordered">
-                                    <thead style="text-align: center">
-                                    <tr>
-                                        <th>Ady, Familiýasy</th>
-                                        <th>Wezipesi</th>
-                                        <th>Hasaba almak</th>
-                                    </tr>
+                                <div class="row">
+                                    <div class="col-md-4 ">
+                                        <label for="year">Ýyl:</label>
+                                        <select style="border-radius: 1px; background-color: white; border: #0d152a" id="year" onchange="updateCalendar()">
+                                        </select>
+                                        <label for="month" style="margin-left: 10px">Aýy:</label>
+                                        <select style="border-radius: 1px;background-color: white" id="month" onchange="updateCalendar()">
+                                        </select>
+                                    </div>
+                                </div>
+
+                                <table class="table table-striped" id="calendar">
+                                    <thead style="text-align: center" class="thead-light">
+                                    <tr></tr>
                                     </thead>
-                                    <tbody style="text-align: center">
-                                    {% for item in staff %}
-                                        <tr>
-                                            <td>{{ item.fullname }}</td>
-                                            <td>{{ item.profession }}</td>
-                                            <td><input name="in_work" type="checkbox" value="{{ item.slug }}" checked></td>
-                                        </tr>
-                                    {% endfor %}
-                                    </tbody>
+                                    <tbody style="text-align: center"></tbody>
                                 </table>
                                 <button class="btn btn-secondary" type="submit" style="float: right; margin-top: 10px; background-color: #00A000">Ýatda sakla</button>
-
                             </form>
                         </div>
                     </div>
@@ -78,14 +70,164 @@
 <script src="{% static '/vendors/datatables.net-bs4/js/dataTables.bootstrap4.min.js' %}"></script>
 <script src="{% static '/assets/js/init-scripts/data-table/datatables-init.js' %}"></script>
 <script>
-    let waw = window.location.protocol
-        + "//"
-        + window.location.host
-        + window.location.pathname
-        + window.location.search.substr(0, window.location.search.indexOf('&')-1)
-    const unical_address = window.location.href.replace(`${waw}`, '')
-    let sel = document.getElementById('bootstrap-data-table-export_length').textContent;
-    document.getElementById('text').innerText = sel
+    let today = new Date()
+    let month = String(today.getMonth())
+    let year =  String(today.getFullYear())
+    document.addEventListener("DOMContentLoaded", function() {
+        populateYears();
+        populateMonths();
+        updateCalendar();
+        selectElement();
+    });
+    function selectElement() {
+        let element = document.getElementById('month');
+        element.value = month;
+        let element2 = document.getElementById('year');
+        element2.value = year;
+        updateCalendar()
+    }
+    function populateYears() {
+        const yearSelect = document.getElementById('year');
+        let d = []
+        for (let item in {{ geti|safe }}) {
+            d.push({{ geti|safe }}[item])
+        }
+        for (let i in d) {
+            let option = new Option(d[i], d[i]);
+            yearSelect.appendChild(option);
+        }
+    }
+
+    function populateMonths() {
+        const monthSelect = document.getElementById('month');
+        const months = ["Ýanwar", "Fewral", "Mart", "Aprel", "Maý", "Iýun", "Iýul", "Awgust", "Sentýabr", "Oktýabr", "Noýabr", "Dekabr"];
+        months.forEach((month, index) => {
+            let option = new Option(month, index);
+            monthSelect.appendChild(option);
+        });
+    }
+    function updateCalendar() {
+
+        const year = document.getElementById('year').value;
+        const month = document.getElementById('month').value;
+        const days = new Date(year, parseInt(month) + 1, 0).getDate();
+
+        const calendar = document.getElementById('calendar');
+        const thead = calendar.querySelector('thead tr');
+        const tbody = calendar.querySelector('tbody');
+        thead.innerHTML = '<th>Familiýasy Ady</th>';
+        tbody.innerHTML = '';
+        for (let i = 1; i <= days; i++) {
+            let th = document.createElement('th');
+            th.textContent = i;
+            thead.appendChild(th);
+        }
+        const employees = [];
+        for (let item in {{ employee|safe }}) {
+            employees.push({{ employee|safe }}[item].fullname)
+        }
+        employees.forEach(employee => {
+            let tr = document.createElement('tr');
+            let nameTd = document.createElement('td');
+            nameTd.textContent = employee;
+            tr.appendChild(nameTd);
+            fetch(`http://127.0.0.1:8000/hasabat/?month=${parseInt(month)+1}&year=${year}&name=${employee}`)
+                .then(response =>response.json())
+                .then(data=> addData(data))
+            function addData(object){
+                let gun = String(new Date().getDate())
+                let ay = String(new Date().getMonth())
+                let yyl = String(new Date().getFullYear())
+                if (month===ay && year===yyl)
+                {
+                    for (let i = 1; i <= days; i++) {
+                        let td = document.createElement('td');
+                        let bool = true
+                        for (let item in object)
+                        {
+                            if (parseInt(gun)===object[item].get_in_date)
+                            {
+                                bool = false;
+                            }
+                        }
+                        if (bool===false){
+                            let sd = document.createElement('i');
+                            for (let item in object)
+                            {
+                                if (i===object[item].get_in_date && object[item].in_work===true)
+                                {
+                                    sd.classList = 'fa fa-check'
+                                    sd.style = 'font-size: 25px'
+                                }
+                                if (i===object[item].get_in_date && object[item].in_work===false)
+                                {
+                                    sd.classList = 'fa fa-close'
+                                    sd.style = 'font-size: 25px'
+                                }
+
+                            }
+                            td.appendChild(sd)
+                        }
+                        else
+                        {
+
+                            let sd;
+                            console.log(typeof(gun))
+                            if (i===parseInt(gun)){
+                                console.log(gun)
+                                sd = document.createElement("input")
+                                sd.type='checkbox'
+                                sd.name='in_work'
+                                sd.value=object[0].person_id_id
+                            }
+                            else{
+                                sd = document.createElement('i');
+                                for (let item in object)
+                                {
+                                    if (i===object[item].get_in_date && object[item].in_work===true)
+                                    {
+                                        sd.classList = 'fa fa-check'
+                                        sd.style = 'font-size: 25px'
+                                    }
+                                    if (i===object[item].get_in_date && object[item].in_work===false)
+                                    {
+                                        sd.classList = 'fa fa-close'
+                                        sd.style = 'font-size: 25px'
+                                    }
+
+                                }
+                            }
+                            td.appendChild(sd)
+                        }
+                        tr.appendChild(td); // Append td cell to the tr row
+                    }
+                }
+                else{
+                    for (let i = 1; i <= days; i++) {
+                        let td = document.createElement('td');
+                        let sd = document.createElement('i');
+                        for (let item in object)
+                        {
+                            if (i===object[item].get_in_date && object[item].in_work===true)
+                            {
+                                sd.classList = 'fa fa-check'
+                                sd.style = 'font-size: 25px'
+                            }
+                            if (i===object[item].get_in_date && object[item].in_work===false)
+                            {
+                                sd.classList = 'fa fa-close'
+                                sd.style = 'font-size: 25px'
+                            }
+                        }
+                        td.appendChild(sd)
+                        tr.appendChild(td); // Append td cell to the tr row
+                    }
+                }
+
+            }
+            tbody.appendChild(tr);
+        });
+    }
 </script>
 </body>
 
