--- a/templates/inc/_sidebar.html
+++ b/templates/inc/_sidebar.html
@@ -9,15 +9,9 @@
         <div id="main-menu" class="main-menu collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="menu-item-has-children dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-exchange" style="color: black"></i><strong>Giriş-Çykyş statistikasy</strong></a>
-                    <ul class="sub-menu children dropdown-menu">
-                        <li><i class="fa fa-sign-in" style="color: black"></i><a href="{%url 'input_statistics'%}"><strong>Hasaba almak</strong></a></li>
-                        <li><i class="fa fa-calendar" style="color: black"></i><a href="{%url 'hasabat'%}"><strong>Hasabat</strong></a></li>
-                    </ul>
-                </li>
-                <li class="menu-item-has-children dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-users" style="color: black"></i><strong>Işgärler</strong></a>
                     <ul class="sub-menu children dropdown-menu">
+                        <li><i class="fa fa-sign-in" style="color: black"></i><a href="{%url 'input_statistics'%}"><strong>Hasabat we Hasaba almak</strong></a></li>
                         <li><i class="ti ti-user" style="color: black"></i><a href="{% url 'staff_members' %}"><strong>Işgärler gory</strong></a></li>
                         <li><i class="fa fa-user-plus" style="color: black"></i><a href="{% url 'register' %}"><strong>Işgär goşmak</strong></a></li>
                     </ul>
