--- a/core/templates/forms-advanced.html
+++ b/core/templates/forms-advanced.html
@@ -66,7 +66,7 @@
                                     <label class=" form-control-label">Wezipesi</label>
                                     <div class="input-group">
                                         <div class="input-group-addon"><i class="fa fa-briefcase"></i></div>
-                                        <input type="text" name="profession" class="form-control">
+                                        <input type="text" name="profession" required="required" class="form-control">
                                     </div>
                                     <small class="form-text text-muted"><strong>meselem.</strong> mugallym</small>
                                 </div>
@@ -74,7 +74,7 @@
                                     <label class=" form-control-label">Telefon belgiňiz</label>
                                     <div class="input-group">
                                         <div class="input-group-addon"><i class="fa fa-phone"></i></div>
-                                        <input type="text" name="phone_number" class="form-control">
+                                        <input type="text" name="phone_number" required="required" class="form-control">
                                     </div>
                                     <small class="form-text text-muted"><strong>meselem.</strong> +993 65 1234567 </small>
                                 </div>
